--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         </li>
                         <li><a href="mmc/aboutus.html">ABOUT US</a>      
                         </li>
-                        <li><a href="mmc/programmes.html">PROGRAMMES</a>
+                        <li><a href="programmes.html">PROGRAMMES</a>
                             <ul class="dropdown">
                                 <li><a href="#">BUSINESS AND ENTREPRENEURSHIP MASTERCLASS</a></li>
                                 <li><a href="#">MENTORSHIP CLINIC</a></li>
