--- a/programmes.html
+++ b/programmes.html
@@ -86,9 +86,9 @@
                    <div class="header-contact">
                         <ul>
                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                           <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                           <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                           <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                           <li><a href="https://twitter.com/impactMinaret?s=08"><i class="fa fa-twitter"></i></a></li>
+                           <li><a href="https://linkedin.com/groups/12168070"><i class="fa fa-linkedin"></i></a></li>
+                           <li><a href="https://instagram.com/muslimmentorshipconnect"><i class="fa fa-instagram"></i></a></li>
                         </ul>
                    </div>                  
                    <ul class="menuzord-menu menuzord-menu-bg">
@@ -429,18 +429,18 @@
                       <a href="#" name = "program"> <div class="t-b-content-area"></a>
                            <h3>INTRODUCTION</h3>
                            <p><strong>MMC </strong>is a Career Foundry Initiative meant to connect Muslims to career and business success.
-                              Our aim is to build capacities and competencies for the Muslim youths and prepare them for challenges of the futur
+                              Our aim is to build capacities and competencies for the Muslim youth and prepare them for challenges of the future.
                            </p>
-                           <p>We set out to Build a new generation of visionary, well-trained, competitive and Godfearing Muslim leaders across various sectors of the Nigerian economy, 
+                           <p>We set out to Build a new generation of visionary, well-trained, competitive and God-fearing Muslim leaders across various sectors of the Nigerian economy, 
                                including political governance. </p>
                                <h3>OUR PROGRAMMES</h3>
-                            <P><strong>Career Activation Foundry:</strong>This is a conference of undergraduate, graduate and unemployed youth and members of MMC. The program holds on a quarterly basis. This initiative provides an avenue for participants to learn critical employability skills and other career growth skills from senior Muslim experts.
+                            <P><strong>Career Activation Foundry:</strong> This is a conference of undergraduate, graduate and unemployed youth and members of MMC. The program holds on a quarterly basis. This initiative provides an avenue for participants to learn critical employability skills and other career growth skills from senior Muslim experts.
                                 This shall hold across States of the federation, insha Allah.</P>
                             <p><strong>Direct mentoring scheme:</strong> This is a six-monthly program that involves assigning direct mentors to Muslim professionals and entrepreneurs in early stages of career, including students within established time range and based on defined criteria. The aim of this is to help the mentee in establishing their career path, 
                                 with guidance and counselling from the mentor. </p>
                             <p><strong>Skill-up Training Session:</strong> This is a completely special training session dedicated to training participants on critical skills aimed at deepening their capacities and
                                     competencies.</p>
-                            <p><strong>Mock Interviews and Pitch Session:</strong> Providing mock interview sessions to members ahead of their scheduled job interview sessions, or mock pitch presentation for those defending business projects +either for customer’s buying,
+                            <p><strong>Mock Interviews and Pitch Session:</strong> Providing mock interview sessions to members ahead of their scheduled job interview sessions, or mock pitch presentation for those defending business projects + either for customer’s buying,
                                 or for funding.</p>
                             <p><strong>Digital Presence:</strong> This involves providing continuous enlightenment, guidance, education and mentoring through regular sessions conducted on the
                                  online platforms. </p>
@@ -489,7 +489,8 @@
                                 </div>
                                 <div class="about-team-member text-center">
                                     <div class="team-describe-content">
-                                        <p>CFO | Financial Controller | Investment Banker | Corporate Finance Manager | Financial Planning & Analysis Professional</p>                                    </div>
+                                        <p>| Financial Controller | Risk Manager | Strategy Geek | Financial Planning & Analysis Professional</p>
+                                    </div>
                                     <div class="social-content-box">
                                         <a href="#"> <i class="fa fa-facebook"></i> </a>
                                         <a href="#"> <i class="fa fa-twitter"></i> </a>
@@ -500,7 +501,7 @@
                             </div>
                             <div class="member-name text-center">
                                 <h2><a href="#">Sikiru Salami</a></h2>
-                                <p>ACA, MRM</p>
+                                <p>CFO, ACA, MRM, FITC, M.Sc, B.Sc </p>
                                 <span></span>
                             </div>
                         </div>
@@ -513,7 +514,7 @@
                                 </div>
                                 <div class="about-team-member text-center">
                                     <div class="team-describe-content">
-                                        <p>CFO | Financial Controller | Investment Banker | Corporate Finance Manager | Financial Planning & Analysis Professional</p>                                    </div>
+                                        <p>| Financial Controller | Investment Banker | | Risk Manager | Strategy | Financial Planning & Analysis Professional</p>                                    </div>
                                     <div class="social-content-box">
                                         <a href="#"> <i class="fa fa-facebook"></i> </a>
                                         <a href="#"> <i class="fa fa-twitter"></i> </a>
@@ -524,7 +525,7 @@
                             </div>
                             <div class="member-name text-center">
                                 <h2><a href="#">Azeez Lawal</a></h2>
-                                <p>ACA, ACS, M.Sc, ACCA, DipIFR</p>
+                                <p>ACA, ACS, M.Sc, B.Sc, ACCA, DipIFR</p>
                                 <span></span>
                             </div>
                         </div>
@@ -537,7 +538,7 @@
                                 </div>
                                 <div class="about-team-member text-center">
                                     <div class="team-describe-content">
-                                        <p>CFO | Financial Controller | Investment Banker | Corporate Finance Manager | Financial Planning & Analysis Professional</p>                                    </div>
+                                        <p>Business Analysis | Relationship Management | Investment Banker Financial Accounting,  Planning & Analysis Professional</p>                                    </div>
                                     <div class="social-content-box">
                                         <a href="#"> <i class="fa fa-facebook"></i> </a>
                                         <a href="#"> <i class="fa fa-twitter"></i> </a>
@@ -561,7 +562,7 @@
                                 </div>
                                 <div class="about-team-member text-center">
                                     <div class="team-describe-content">
-                                        <p>CFO | Financial Controller | Investment Banker | Corporate Finance Manager | Financial Planning & Analysis Professional</p>                                    </div>
+                                        <p>MD/CEO Coronation Merchant bank | Financial Controller | Investment Banker | Corporate Finance Manager |</p>                                    </div>
                                     <div class="social-content-box">
                                         <a href="#"> <i class="fa fa-facebook"></i> </a>
                                         <a href="#"> <i class="fa fa-twitter"></i> </a>
@@ -572,7 +573,7 @@
                             </div>
                             <div class="member-name text-center">
                                 <h2><a href="#">Abu Jimoh</a></h2>
-                                <p>ACA, MBA</p>
+                                <p>CFA, FCA, AMP, M.Sc Finance, B.Sc</p>
                                 <span></span>
                             </div>
                         </div>
