--- a/faqs.html
+++ b/faqs.html
@@ -75,12 +75,6 @@
     <script type="text/javascript" src="revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
     <script type="text/javascript" src="revolution/js/extensions/revolution.extension.navigation.min.js"></script>
     <script type="text/javascript" src="revolution/js/extensions/revolution.extension.parallax.min.js"></script>
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
     <link rel="stylesheet" href="css/mojeed.css">
 
 </head>
@@ -140,7 +134,7 @@
                          </li>
                          <li><a href="faqs.html">FAQS</a>
                          </li>
-                         <li><a href="media.html">MEDIA</a>
+                         <li><a href="#">MEDIA</a>
                              <ul class="dropdown">
                                  <li><a href="news.html">NEWS</a></li>
                                  <li><a href="resources.html">RESOURCES</a></li>
