--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                          </li>
                          <li><a href="faqs.html">FAQS</a>
                          </li>
-                         <li><a href="media.html">MEDIA</a>
+                         <li><a href="#">MEDIA</a>
                              <ul class="dropdown">
                                  <li><a href="news.html">NEWS</a></li>
                                  <li><a href="resources.html">RESOURCES</a></li>
