--- a/media.html
+++ b/media.html
@@ -110,7 +110,7 @@
                          </li>
                          <li><a href="faqs.html">FAQS</a>
                          </li>
-                         <li><a href="media.html">MEDIA</a>
+                         <li><a href="#">MEDIA</a>
                              <ul class="dropdown">
                                  <li><a href="news.html">NEWS</a></li>
                                  <li><a href="resources.html">RESOURCES</a></li>
@@ -1238,74 +1238,21 @@
             </div>
         </div>
         <div class="footer-content">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6 col-md-4">
-                        <div class="f-first-content f-all-h2">
-                            <div class="f-content-img">
-                                <a href="#"><img src="images/fotter-horse.png" alt="f-image"></a>
-                            </div>
-                            <p>Trust is a business theme perfectly suited legal advisers and offices, lawyers, attorneys, counsels, advocates and other legal and law related services.Trust started as a sole practitioner providing services to the area community.</p>
-                            <p><a href="#">Buy This Theme <i class="fa fa-long-arrow-right"></i></a></p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-3">
-                        <div class="f-second-content f-all-h2">
-                            <h2>Business Hours</h2>
-                            <ul>
-                                <li><a href="#">Opining Days :</a></li>
-                                <li><a href="#">Monday – Friday : 9am to 20 pm</a></li>
-                                <li><a href="#">Saturday : 9am to 17 pm</a></li>
-                            </ul>
-                            <ul>
-                                <li><a href="#">Vacations :</a></li>
-                                <li><a href="#">All Sunday Days</a></li>
-                                <li><a href="#">All Official Holidays</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-2">
-                        <div class="f-third-content f-all-h2">
-                            <h2>Practice Areas</h2>
-                            <ul>
-                                <li><a href="#"><i class="fa fa-long-arrow-right"></i>Family Law</a></li>
-                                <li><a href="#"><i class="fa fa-long-arrow-right"></i>Fire Accident</a></li>
-                                <li><a href="#"><i class="fa fa-long-arrow-right"></i>Sexual Offences</a></li>
-                                <li><a href="#"><i class="fa fa-long-arrow-right"></i>Drug Offences</a></li>
-                                <li><a href="#"><i class="fa fa-long-arrow-right"></i>Financial Law</a></li>
-                                <li><a href="#"><i class="fa fa-long-arrow-right"></i>Shoplifting</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-3">
-                        <div class="f-fourth-content f-all-h2">
-                            <h2>Newsletter</h2>
-                            <p>Don’t miss to subscribe to our news feeds, kindly fill the form below.</p>
-                            <form>
-                                <div class="form-group footer-subscribe">
-                                    <input type="email" class="form-control" id="Email1" placeholder="Subscribe In Our Newsletter">
-                                    <button type="submit" class="btn btn-default">Join</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+          
         <div class="container">
             <div class="row">
                <div class="footer-bottom clearfix">
                     <div class="col-md-6 col-sm-6 no-padding-left">
                         <div class="f-bottom-left-text">
-                            <p>Trust © All Rights Reserved. With Love by <span><a href="#">7oroof.com</a></span> </p>
+                            <p>MMC © All Rights Reserved. With Love by <span><a href="#">interns</a></span> </p>
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-6 no-padding-right">
                         <div class="f-bottom-right-text">
                             <ul>
-                                <li><a href="#">News</a></li>
-                                <li><a href="#">FAQs</a></li>
-                                <li><a href="#">Careers</a></li>
+                                <li><a href="news">News</a></li>
+                                <li><a href="faqs">FAQs</a></li>
+                                <li><a href="careers">Careers</a></li>
                                 <li><a href="#">Privacy Policy</a></li>
                                 <li><a href="#">Terms of Use</a></li>
                             </ul>
