--- a/news.html
+++ b/news.html
@@ -140,7 +140,7 @@
                        </li>
                        <li><a href="faqs.html">FAQS</a>
                        </li>
-                       <li><a href="media.html">MEDIA</a>
+                       <li><a href="#">MEDIA</a>
                            <ul class="dropdown">
                                <li><a href="news.html">NEWS</a></li>
                                <li><a href="resources.html">RESOURCES</a></li>
@@ -167,7 +167,7 @@
             <ul>      
                     <li data-index="rs-6" data-transition="parallaxtoright" data-slotamount="default"  data-easein="default" data-easeout="default" data-masterspeed="default" data-delay="6510"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-description="">
                         <!-- MAIN IMAGE -->
-                        <img src="images/banner1.jpg"  alt=""  width="1920" height="1280" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="off" class="rev-slidebg" data-no-retina>
+                        <img src="images/gallery/caf3.jpg"  alt=""  width="1920" height="1280" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="off" class="rev-slidebg" data-no-retina>
                         <!-- LAYERS -->
 
                                        
@@ -368,102 +368,48 @@
     ============================== -->   
 
     <footer class="footer-area">
-        <div class="footer-head">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-3 col-md-3">
-                        <div class="f-h-content">
-                            <h3>Call Us Now !</h3>
-                            <h2>002 0106 5370701</h2>
-                            <p><a href="#">24/7 Available</a></p>
-                        </div>
-                    </div>
-                    <div class="col-sm-3 col-md-3">
-                        <div class="f-h-content">
-                            <h3>Send Us Message !</h3>
-                            <h2>7oroof@7oroof.com</h2>
-                            <p><a href="#">24/7 Available</a></p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-6">
-                        <div class="f-h-content">
-                            <h3>Visit Our Office !</h3>
-                            <h2>Alnahas Building, 2 AlBahr St, Tanta AlGharbia, Egypt.</h2>
-                            <p><a href="#">View Map</a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="footer-content">
             <div class="container">
-                <div class="row">
-                    <div class="col-sm-6 col-md-4">
+                <div class="row footer-cols">
+                    <div class="col-sm-6 col-md-3">
                         <div class="f-first-content f-all-h2">
-                            <div class="f-content-img">
-                                <a href="#"><img src="images/fotter-horse.png" alt="f-image"></a>
-                            </div>
-                            <p>Trust is a business theme perfectly suited legal advisers and offices, lawyers, attorneys, counsels, advocates and other legal and law related services.Trust started as a sole practitioner providing services to the area community.</p>
-                            <p><a href="#">Buy This Theme <i class="fa fa-long-arrow-right"></i></a></p>
+                            <h2>Muslim Mentorship Connect</h2>
+                            <p>MMC was established to develop self-sustaining Muslim entrepreneurs and business owners with capacity to support the future demands of the Ummah, in terms of employment, support for the poor and funding assistance for Islamic programs.</p>
+                            <i class="fa fa-twitter-square"></i>
+                            <i class="fa fa-instagram"></i>
+                            <i class="fa fa-linkedin-square"></i>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3">
                         <div class="f-second-content f-all-h2">
-                            <h2>Business Hours</h2>
-                            <ul>
-                                <li><a href="#">Opining Days :</a></li>
-                                <li><a href="#">Monday – Friday : 9am to 20 pm</a></li>
-                                <li><a href="#">Saturday : 9am to 17 pm</a></li>
-                            </ul>
-                            <ul>
-                                <li><a href="#">Vacations :</a></li>
-                                <li><a href="#">All Sunday Days</a></li>
-                                <li><a href="#">All Official Holidays</a></li>
-                            </ul>
+                            <h2>Twitter</h2>
                         </div>
+                        <div class="social-container"></div>
+                        
                     </div>
-                    <div class="col-sm-6 col-md-2">
+                    <div class="col-sm-6 col-md-3">
                         <div class="f-third-content f-all-h2">
-                            <h2>Practice Areas</h2>
-                            <ul>
-                                <li><a href="#"><i class="fa fa-long-arrow-right"></i>Family Law</a></li>
-                                <li><a href="#"><i class="fa fa-long-arrow-right"></i>Fire Accident</a></li>
-                                <li><a href="#"><i class="fa fa-long-arrow-right"></i>Sexual Offences</a></li>
-                                <li><a href="#"><i class="fa fa-long-arrow-right"></i>Drug Offences</a></li>
-                                <li><a href="#"><i class="fa fa-long-arrow-right"></i>Financial Law</a></li>
-                                <li><a href="#"><i class="fa fa-long-arrow-right"></i>Shoplifting</a></li>
-                            </ul>
+                            <h2>Instagram</h2>
                         </div>
+                        <div class="social-container"></div>
                     </div>
                     <div class="col-sm-6 col-md-3">
                         <div class="f-fourth-content f-all-h2">
-                            <h2>Newsletter</h2>
-                            <p>Don’t miss to subscribe to our news feeds, kindly fill the form below.</p>
-                            <form>
-                                <div class="form-group footer-subscribe">
-                                    <input type="email" class="form-control" id="Email1" placeholder="Subscribe In Our Newsletter">
-                                    <button type="submit" class="btn btn-default">Join</button>
-                                </div>
-                            </form>
+                            <h2>LinkedIn</h2>
                         </div>
+                        <div class="social-container"></div>
                     </div>
                 </div>
             </div>
         </div>
-
         <div class="container">
-            <div class="row footer-bottom">
-                <div class="col-md-6 f-bottom-left-text">
-                    <p>Trust © All Rights Reserved. With Love by <span><a href="#"> 7oroof.com</a></span> </p>
-                </div>
-                <div class="col-md-6 f-bottom-right-text">
-                    <ul>
-                        <li><a href="#">News</a></li>
-                        <li><a href="#">FAQs</a></li>
-                        <li><a href="#">Careers</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Use</a></li>
-                    </ul>
+            <div class="row">
+               <div class="footer-bottom clearfix">
+                    <div class="col-md-6 col-sm-6 no-padding-left">
+                        <div class="f-bottom-left-text">
+                            <p>Muslim Mentorship Connect © All Rights Reserved. With Love by <span><a href="#">MMC Interns</a></span> </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
