will activate the current page

--- a/faqs.html
+++ b/faqs.html
@@ -116,7 +116,7 @@
                          </ul>
                     </div>                  
                     <ul class="menuzord-menu menuzord-menu-bg">
-                         <li  class="active"><a href="index.html">HOME</a>    
+                         <li><a href="index.html">HOME</a>    
                          </li>
                          <li><a href="aboutus.html">ABOUT US</a>      
                          </li>
@@ -132,7 +132,7 @@
                          </li>
                          <li><a href="champions.html">CHAMPIONS</a>
                          </li>
-                         <li><a href="faqs.html">FAQS</a>
+                         <li class= "active"><a href="faqs.html">FAQS</a>
                          </li>
                          <li><a href="#">MEDIA</a>
                              <ul class="dropdown">
