--- a/news.html
+++ b/news.html
@@ -122,7 +122,7 @@
                        </ul>
                   </div>                  
                   <ul class="menuzord-menu menuzord-menu-bg">
-                       <li  class="active"><a href="index.html">HOME</a>    
+                       <li><a href="index.html">HOME</a>    
                        </li>
                        <li><a href="aboutus.html">ABOUT US</a>      
                        </li>
@@ -142,7 +142,7 @@
                        </li>
                        <li><a href="#">MEDIA</a>
                            <ul class="dropdown">
-                               <li><a href="news.html">NEWS</a></li>
+                               <li class= "active"><a href="news.html">NEWS</a></li>
                                <li><a href="resources.html">RESOURCES</a></li>
                            </ul>
                        </li>                        
