--- a/programmes.html
+++ b/programmes.html
@@ -92,11 +92,11 @@
                         </ul>
                    </div>                  
                    <ul class="menuzord-menu menuzord-menu-bg">
-                        <li  class="active"><a href="index.html">HOME</a>    
+                        <li><a href="index.html">HOME</a>    
                         </li>
                         <li><a href="aboutus.html">ABOUT US</a>      
                         </li>
-                        <li><a href="programmes.html">PROGRAMMES</a>
+                        <li class="active"><a href="programmes.html">PROGRAMMES</a>
                             <ul class="dropdown">
                                 <li><a href="practice-area-1.html">CAREER ACTIVATION FOUNDRY</a></li>
                                 <li><a href="practice-area-2.html">DIRECT MENTORING SCHEME</a></li>
