--- a/resources.html
+++ b/resources.html
@@ -130,7 +130,7 @@
                          </ul>
                     </div>                  
                     <ul class="menuzord-menu menuzord-menu-bg">
-                         <li  class="active"><a href="index.html">HOME</a>    
+                         <li><a href="index.html">HOME</a>    
                          </li>
                          <li><a href="aboutus.html">ABOUT US</a>      
                          </li>
@@ -154,7 +154,7 @@
                                  <li><a href="resources.html">RESOURCES</a></li>
                              </ul>
                          </li>                        
-                         <li><a href="contact.html">CONTACT</a>
+                         <li  class="active"><a href="contact.html">CONTACT</a>
                          </li>
                     </ul>
                  </div>
