--- a/aboutus.html
+++ b/aboutus.html
@@ -47,12 +47,6 @@
     <script type="text/javascript" src="revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
     <script type="text/javascript" src="revolution/js/extensions/revolution.extension.navigation.min.js"></script>
     <script type="text/javascript" src="revolution/js/extensions/revolution.extension.parallax.min.js"></script>
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
   <body>
     <!-- =========================
@@ -91,9 +85,9 @@
                          </ul>
                     </div>                  
                     <ul class="menuzord-menu menuzord-menu-bg">
-                         <li  class="active"><a href="index.html">HOME</a>    
+                         <li  class=><a href="index.html">HOME</a>    
                          </li>
-                         <li><a href="aboutus.html">ABOUT US</a>      
+                         <li class= "active"><a href="aboutus.html">ABOUT US</a>      
                          </li>
                          <li><a href="programmes.html">PROGRAMMES</a>
                              <ul class="dropdown">
