--- a/champions.html
+++ b/champions.html
@@ -93,7 +93,7 @@
                          </ul>
                     </div>                  
                     <ul class="menuzord-menu menuzord-menu-bg">
-                         <li  class="active"><a href="index.html">HOME</a>    
+                         <li><a href="index.html">HOME</a>    
                          </li>
                          <li><a href="aboutus.html">ABOUT US</a>      
                          </li>
@@ -107,7 +107,7 @@
                                  <li><a href="practice-area-2.html">BUSINESS PITCH FOR FUND</a></li>
                              </ul>
                          </li>
-                         <li><a href="champions.html">CHAMPIONS</a>
+                         <li class= "active"><a href="champions.html">CHAMPIONS</a>
                          </li>
                          <li><a href="faqs.html">FAQS</a>
                          </li>
