--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
                          </ul>
                     </div>                  
                     <ul class="menuzord-menu menuzord-menu-bg">
-                         <li  class="active"><a href="index.html">HOME</a>    
+                         <li><a href="index.html">HOME</a>    
                          </li>
                          <li><a href="aboutus.html">ABOUT US</a>      
                          </li>
@@ -117,7 +117,7 @@
                                  <li><a href="resources.html">RESOURCES</a></li>
                              </ul>
                          </li>                        
-                         <li><a href="contact.html">CONTACT</a>
+                         <li class="active"><a href="contact.html">CONTACT</a>
                          </li>
                     </ul>
                  </div>
