font will look alike over all the pages

--- a/programmes.html
+++ b/programmes.html
@@ -601,15 +601,15 @@
                     </div>
                     <div class="col-sm-3 col-md-3">
                         <div class="f-h-content">
-                            <h3>Send Us Message !</h3>
-                            <h2>7oroof@7oroof.com</h2>
-                            <p><a href="#">24/7 Available</a></p>
+                            <h3>Twitter</h3>
+                            <h2>twitter.com/mmc</h2>
+                            <!-- <p><a href="#">24/7 Available</a></p> -->
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-6">
                         <div class="f-h-content">
-                            <h3>Visit Our Office !</h3>
-                            <h2>Alnahas Building, 2 AlBahr St, Tanta AlGharbia, Egypt.</h2>
+                            <h3>We are MMC</h3>
+                            <h2>We are established to develop self-sustaining Muslim entrepreneurs and business owners with capacity to support the future demands of the Ummah, in terms of employment, support for the poor and funding assistance for Islamic programs..</h2>
                             <p><a href="#">View Map</a></p>
                         </div>
                     </div>
