will correct margin discord just before footer

--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                         <div class="col-md-1">
                                 <img src="images/practice-area-1-blog.jpg" alt="Abu Jimoh" width="150px" height="150px">
                         </div>
-                        <div class="col-md-6" style="padding: 20px";>
+                        <div class="col-md-6">
                                 <h5 class="post-events-heading">MMC CAF 4.0. Ilorin</h5>
                                 <h6 class="post-events-date">June, 29, 2019</h6>
                                 <p>A hundred and fifty participants, Five dignitories, sirene environents Experience driven and lot of fun.</p>
