--- a/programmes.html
+++ b/programmes.html
@@ -594,15 +594,15 @@
                 <div class="row">
                     <div class="col-sm-3 col-md-3">
                         <div class="f-h-content">
-                            <h3>Call Us Now !</h3>
-                            <h2>002 0106 5370701</h2>
+                            <h3>Linkedin</h3>
+                            <h2></h2>
                             <p><a href="#">24/7 Available</a></p>
                         </div>
                     </div>
                     <div class="col-sm-3 col-md-3">
                         <div class="f-h-content">
                             <h3>Twitter</h3>
-                            <h2>twitter.com/mmc</h2>
+                            <h2></h2>
                             <!-- <p><a href="#">24/7 Available</a></p> -->
                         </div>
                     </div>
